[workspace]
resolver ="2"

members = [
    "matasano-bitwise",
    "matasano-challenges",
    "matasano-constants",
    "matasano-encoding",
    "matasano-parser",
    "matasano-util"
]

[workspace.lints]
rust.rust_2018_idioms = { level = "warn" }

clippy.correctness.level = "warn"
clippy.perf.level = "warn"
clippy.disallowed_methods.level = "warn"

[workspace.dependencies]
matasano-bitwise = { path = "./matasano-bitwise" }
matasano-challenges = { path = "./matasano-challenges" }
matasano-constants = { path = "./matasano-constants" }
matasano-encoding = { path = "./matasano-encoding" }
matasano-parser = { path = "./matasano-parser" }
matasano-util = { path = "./matasano-util" }

anyhow = "1.0"
paste = "1.0"
