[workspace]
resolver ="2"

members = [
    "matasano-bitwise",
    "matasano-challenges",
    "matasano-constants",
    "matasano-encoding",
    "matasano-parser",
    "matasano-util"
]

[workspace.lints.rust]
explicit_outlives_requirements = "warn"
impl_trait_redundant_captures = "warn"
macro_use_extern_crate = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
single_use_lifetimes = "warn"
rust_2018_idioms = "warn"
unit_bindings = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"

[workspace.lints.clippy]
correctness.level = "warn"
perf.level = "warn"
disallowed_methods.level = "warn"

[workspace.dependencies]
matasano-bitwise = { path = "./matasano-bitwise" }
matasano-challenges = { path = "./matasano-challenges" }
matasano-constants = { path = "./matasano-constants" }
matasano-encoding = { path = "./matasano-encoding" }
matasano-parser = { path = "./matasano-parser" }
matasano-util = { path = "./matasano-util" }

anyhow = "1.0"
itertools = "0.14"
paste = "1.0"
